--- a/src/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/Resources/views/Dashboard/dashboard.html.twig
@@ -55,17 +55,18 @@
                                 </button>
                             </div>
                             <div class="col-6 p-2">
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
-                                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">15% opened
+                                <div class="progress" title="{{ '' }}">
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: {{ mail.percentOpened }}%"
+                                         aria-valuenow="{{ mail.percentOpened }}" aria-valuemin="0" aria-valuemax="100">
+                                        {{ mail.percentOpened }}%
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 p-2">
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                                    <div class="progress-bar progress-bar-striped {% if mail.totalSended != mail.totalToSend %}progress-bar-animated{% endif %}"
                                          role="progressbar"
-                                         style="width: {{ mail.percent }}%;" aria-valuenow="25" aria-valuemin="0"
+                                         style="width: {{ mail.percentSent }}%;" aria-valuenow="25" aria-valuemin="0"
                                          aria-valuemax="100">{{ mail.percent }}%
                                     </div>
                                 </div>
