--- a/src/Resources/views/Dashboard/_pager.html.twig
+++ b/src/Resources/views/Dashboard/_pager.html.twig
@@ -1,4 +1,4 @@
-<div class="row mb-2 align-items-center">
+<div class="row align-items-center">
     <div class="col-md-4">
         {# Display the number of items #}
         {% if total > 0 %}
