--- a/src/Resources/views/_html.html.twig
+++ b/src/Resources/views/_html.html.twig
@@ -1,1 +1,4 @@
-<iframe style="width: 100%; height:600px" srcdoc="{{ value }}"></iframe>
+<iframe
+        class="border"
+        style="width: 100%; height:600px"
+        srcdoc="{{ value }}"></iframe>
