Add margins in emails list

--- a/src/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/Resources/views/Dashboard/dashboard.html.twig
@@ -29,7 +29,7 @@
 
     <div class="row my-2">
         {% for mail in mails %}
-            <div class="col-4">
+            <div class="col-4 mb-3">
                 <div class="card">
                     <a href="{{ path('lle_hermes_crudit_mail_show', {id: mail.id}) }}">
                         <div class="card-header bg-primary text-white">
