--- a/src/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/Resources/views/Dashboard/dashboard.html.twig
@@ -52,7 +52,7 @@
                                         {{ mail.totalUnsubscribed }}
                                     </span>
                                 </button>
-                                <button class="btn btn-sm position-relative" title="{{ 'title.totalLinkOpenned'|trans({}, 'LleHermesBundle') }}">
+                                <button class="btn btn-sm position-relative" title="{{ 'title.totalLinkOpened'|trans({}, 'LleHermesBundle') }}">
                                     <i class="fas fa-link"></i>
                                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                                         {{ mail.totalLinkOpening }}
