--- a/src/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/Resources/views/Dashboard/dashboard.html.twig
@@ -69,7 +69,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% block dashboard_percent_rate %}
+                            {% block percent_rate %}
                                 <div class="col-12 p-2">
                                     {% include '@LleHermes/layout/_sending_rate.html.twig' with {'mail': mail} %}
                                 </div>
