ajout condition si template appelé dans crudConfig

--- a/src/Resources/views/layout/_mail_statistics.html.twig
+++ b/src/Resources/views/layout/_mail_statistics.html.twig
@@ -1,3 +1,7 @@
+{% if mail is not defined %}
+    {% set mail = resource %}
+{% endif %}
+
 <div class="mail-statistic" title="{{ 'title.totalToSend'|trans({}, 'LleHermesBundle') }}">
     <div class="mail-statistic__circle border-primary">
         <span class="mt-2">
