Add built assets and assets on all pages

--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 
 {% block head_stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/llehermes/app.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('bundles/llehermes/style.css') }}"/>
 {% endblock %}
 
 {% block head_javascript %}
