--- a/src/Resources/views/layout/_percent.html.twig
+++ b/src/Resources/views/layout/_percent.html.twig
@@ -1,5 +1,6 @@
 <div class="progress" title="{{ view.field.label|trans({}, 'LleHermesBundle') }}">
-    <div class="progress-bar bg-success" role="progressbar" style="width: {{ value|default('0') }}%" aria-valuenow="{{ value|default('0') }}" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-success" role="progressbar" style="width: {{ value|default('0') }}%"
+         aria-valuenow="{{ value|default('0') }}" aria-valuemin="0" aria-valuemax="100">
         {{ value|default('0') }}%
     </div>
 </div>
