add cmd to delete old mails + config + change display of attachments to show if they are deleted 2le/crudit#518

--- a/src/Resources/views/crud/_attachement.html.twig
+++ b/src/Resources/views/crud/_attachement.html.twig
@@ -1,10 +1,18 @@
 {% if value %}
-    {% for attachement in value %}
-        <a
-            href="{{ path('lle_hermes_crudit_mail_show_attachement', {'id': view.resource.id, 'file': attachement["name"]}) }}"
-            target="_blank"
-        >
-            {{ attachement["name"] }}
-        </a> <br>
-    {% endfor %}
+    {% if resource.attachmentDeleted %}
+        {% for attachement in value %}
+            <p>
+                {{ attachement["name"] }} (deleted)
+            </p> <br>
+        {% endfor %}
+    {% else %}
+        {% for attachement in value %}
+            <a
+                href="{{ path('lle_hermes_crudit_mail_show_attachement', {'id': view.resource.id, 'file': attachement["name"]}) }}"
+                target="_blank"
+            >
+                {{ attachement["name"] }}
+            </a> <br>
+        {% endfor %}
+    {% endif %}
 {% endif %}
