--- a/src/Resources/views/crud/_attachement.html.twig
+++ b/src/Resources/views/crud/_attachement.html.twig
@@ -2,7 +2,7 @@
     {% if resource.attachmentDeleted %}
         {% for attachement in value %}
             <p>
-                {{ attachement["name"] }} (deleted)
+                {{ attachement["name"] }} {{ text.deleted|trans({}, 'LleHermesBundle') }}
             </p> <br>
         {% endfor %}
     {% else %}
